plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.neotee'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testImplementation {
        extendsFrom compileOnly
    }
}

repositories {
    mavenCentral()
    maven { url = uri('https://repo.spring.io/milestone') }
    maven { url = uri('https://repo.spring.io/snapshot') }
    maven { url = uri('https://jitpack.io') }
}


dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.4"
        mavenBom "org.springdoc:springdoc-openapi:2.6.0"
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database
    runtimeOnly 'com.h2database:h2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Testcontainers
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'

    // ArchUnit
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.0'

    // Other libraries
    testImplementation 'com.github.divekit:divekit-test-library:e90e4e7'
    implementation 'guru.nidi:code-assert:0.9.15'
    implementation 'net.datafaker:datafaker:2.4.2'

    // OpenAPI -
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui'
}

tasks.named('test') {
    useJUnitPlatform()
}